--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <link rel="shortcut icon" type="image/png" href="/favicon.png">
+    <link rel="shortcut icon" type="image/png" href="%PUBLIC_URL%/favicon.png">
     <meta
       name="description"
       content="A space for friends to jump onto online canvases, share music, draw, and animate shapes"
