User show page styled. Buttons could be smoother but can always come back

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="shortcut icon" type="image/png" href="%PUBLIC_URL%/favicon.png">
@@ -10,6 +9,7 @@
       name="description"
       content="A space for friends to jump onto online canvases, share music, draw, and animate shapes"
     />
+    <meta property="og:url" content="%PUBLIC_URL%" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="stylesheet" href="https://use.typekit.net/mjf4pgl.css">
     <!--
