adding transitions and fixing some testing issues

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,10 @@
       content="A space for friends to jump onto online canvases, share music, draw, and animate shapes"
     />
     <meta property="og:url" content="%PUBLIC_URL%" />
+    <meta property='og:title' content="Virtual Canvas | Shared Canvases for Multimedia Artists"/>
+    <meta property='og:image' content="%PUBLIC_URL%/openGraphImg.png"/>
+    <meta property='og:description' content="A space for friends to jump onto online canvases, share music, draw, and animate shapes."/>
+    <meta property="og:type" content="website" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="stylesheet" href="https://use.typekit.net/mjf4pgl.css">
     <!--
